Trying to get the Order/Filter work; Also fixed some AllPlayDates

--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -10,17 +10,13 @@
   background-size: cover;
 } */
 
-
-
-
-
 .top-left {
   position: absolute;
   top: 8px;
   left: 16px;
 }
 
-.container {
+.container1 {
   position: relative;
   text-align: center;
   color: black;
